message basic update

--- a/src/mylangchain_app/05LangGraph/03_LangGraph_MessageState_RAG.ipynb
+++ b/src/mylangchain_app/05LangGraph/03_LangGraph_MessageState_RAG.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,28 +120,12 @@
      "output_type": "stream",
      "text": [
       "solar-pro\n",
-      "채식주의자를 위한 메뉴로 다음과 같은 옵션을 추천드립니다:  \n",
-      "\n",
-      "### 1. **가든 샐러드 (₩12,000)**  \n",
-      "   - **특징**: 완전한 채식 메뉴로, 유기농 채소(믹스 그린, 체리 토마토, 오이, 당근)와 발사믹 드레싱으로 구성됩니다.  \n",
-      "   - **추천 이유**: 신선함과 다양한 식감, 건강한 재료만 사용해 채식주의자에게 적합합니다.  \n",
-      "\n",
-      "### 2. **트러플 리조또 (₩22,000)**  \n",
-      "   - **특징**: 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈로 만든 크리미한 리조또입니다.  \n",
-      "   - **확인 필요**: 치즈(파르미지아노) 포함 여부를 확인해야 합니다. 만약 **락토-오보 채식**이라면 선택 가능합니다.  \n",
-      "\n",
-      "### 3. **버섯 크림 수프 (₩10,000)**  \n",
-      "   - **특징**: 양송이버섯과 표고버섯을 생크림과 트러플 오일로 조리한 수프입니다.  \n",
-      "   - **추천 이유**: 동물성 재료가 없어 **비건**도 즐길 수 있습니다(단, 생크림의 원유가 아닌 식물성 크림인지 확인 필요).  \n",
-      "\n",
-      "### 제외할 메뉴  \n",
-      "- **안심 스테이크 샐러드**, **치킨 콘피**, **해산물 파스타**는 각각 소고기, 닭, 해산물이 포함되어 채식 메뉴가 아닙니다.  \n",
-      "\n",
-      "### 추가 요청 사항  \n",
-      "- **비건**을 고려할 경우, 드레싱이나 수프의 크림 성분(동물성 여부)을 미리 확인하는 것이 좋습니다.  \n",
-      "- 레스토랑에 **비건 옵션**이 있는지 문의하면 더 정확한 추천이 가능할 것입니다.  \n",
-      "\n",
-      "건강한 식사 되세요! 🌱\n"
+      "{'id': 'cc60a6e4-b579-4e27-a924-2a6e160c3810', 'metadata': {'source': '../data/restaurant_menu.txt', 'menu_number': 5, 'menu_name': '가든 샐러드'}, 'page_content': '5. 가든 샐러드\\n   • 가격: ₩12,000\\n   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\\n   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.', 'type': 'Document'}\n",
+      "{'id': '2e76eb60-4531-4974-8ed5-8ed457a6cf0a', 'metadata': {'source': '../data/restaurant_menu.txt', 'menu_number': 8, 'menu_name': '안심 스테이크 샐러드'}, 'page_content': '8. 안심 스테이크 샐러드\\n   • 가격: ₩26,000\\n   • 주요 식재료: 소고기 안심, 루꼴라, 체리 토마토, 발사믹 글레이즈\\n   • 설명: 부드러운 안심 스테이크를 얇게 슬라이스하여 신선한 루꼴라 위에 올린 메인 요리 샐러드입니다. 체리 토마토와 파마산 치즈 플레이크로 풍미를 더하고, 발사믹 글레이즈로 마무리하여 고기의 풍미를 한층 끌어올렸습니다.', 'type': 'Document'}\n",
+      "{'id': '64632976-e74c-40df-a05f-334ab5b56118', 'metadata': {'source': '../data/restaurant_menu.txt', 'menu_number': 9, 'menu_name': '치킨 콘피'}, 'page_content': '9. 치킨 콘피\\n   • 가격: ₩23,000\\n   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\\n   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.', 'type': 'Document'}\n",
+      "{'id': 'e1e028fa-aa7e-4d40-8f57-452faa537309', 'metadata': {'source': '../data/restaurant_menu.txt', 'menu_number': 6, 'menu_name': '해산물 파스타'}, 'page_content': '6. 해산물 파스타\\n   • 가격: ₩24,000\\n   • 주요 식재료: 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스\\n   • 설명: 알 덴테로 삶은 링귀네 파스타에 신선한 해산물을 듬뿍 올린 메뉴입니다. 토마토 소스의 산미와 해산물의 감칠맛이 조화를 이루며, 마늘과 올리브 오일로 풍미를 더했습니다. 파슬리를 뿌려 향긋한 맛을 더합니다.', 'type': 'Document'}\n",
+      "{'id': '29e48b91-6083-4782-87f0-b86d3537888a', 'metadata': {'source': '../data/restaurant_menu.txt', 'menu_number': 4, 'menu_name': '버섯 크림 수프'}, 'page_content': '4. 버섯 크림 수프\\n   • 가격: ₩10,000\\n   • 주요 식재료: 양송이버섯, 표고버섯, 생크림, 트러플 오일\\n   • 설명: 양송이버섯과 표고버섯을 오랜 시간 정성스레 끓여 만든 크림 수프입니다. 부드러운 텍스처와 깊은 버섯 향이 특징이며, 최상급 트러플 오일을 살짝 뿌려 고급스러운 향을 더했습니다. 파슬리를 곱게 다져 고명으로 올려 제공됩니다.', 'type': 'Document'}\n",
+      "{'id': '756956b1-e82c-451a-9fa7-1f49a61670e2', 'metadata': {'source': '../data/restaurant_menu.txt', 'menu_number': 2, 'menu_name': '트러플 리조또'}, 'page_content': '2. 트러플 리조또\\n   • 가격: ₩22,000\\n   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\\n   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.', 'type': 'Document'}\n"
      ]
     }
    ],
@@ -226,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,6 +277,7 @@
     "    \n",
     "    # score 필드는 0.0에서 1.0 사이의 점수를 나타냅니다.\n",
     "    score: float = Field(\n",
+    "        #...(Ellipsis, 말줄임표)는 \"이 필드는 필수값이며 기본값이 없음\"을 의미합니다.\n",
     "        ...,\n",
     "        ge=0,  # 0보다 크거나 같음\n",
     "        le=1,  # 1보다 작거나 같음\n",
@@ -316,11 +301,11 @@
     "    # 질문과 답변을 추출합니다.\n",
     "    # -2는 사용자의 마지막 질문, -1은 AI의 마지막 답변을 의미합니다.\n",
     "    question = messages[-2].content\n",
-    "    print('====>2. question ')\n",
+    "    print('====>2. question ', type(messages[-2]))\n",
     "    print(question)\n",
     "\n",
     "    answer = messages[-1].content\n",
-    "    print('====>2. answer ')\n",
+    "    print('====>2. answer ', type(messages[-1]))\n",
     "    print(answer)\n",
     "    \n",
     "    # 검색된 문서 목록을 가져와 프롬프트에 사용하기 위해 포맷팅합니다.\n",
@@ -363,12 +348,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`(4) 엣지(Edge)`"
+    "`(4) 엣지(Edge)`\n",
+    "* routing 함수"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +363,7 @@
     "# 반환 값은 \"retrieve_and_respond\" 또는 \"generate\"로 고정됩니다.\n",
     "# END 노드에 대한 별칭(alias)으로 \"generate\"로 사용합니다.\n",
     "def should_retry(state: GraphState) -> Literal[\"retrieve_and_respond\", \"generate\"]:\n",
-    "    print(\"==>3. should_retry\")\n",
+    "    print(\"==>3. should_retry 라우팅함수\")\n",
     "    print(\"----GRADTING---\")\n",
     "    print(\"Grade Score 점수 : \", state[\"grade\"])\n",
     "    print(\"시도횟수 = \", state[\"num_generation\"])\n",
@@ -407,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -520,23 +506,28 @@
      "text": [
       "==>1. retrieve_and_respond\n",
       "==>2. grade_answer\n",
-      "[HumanMessage(content='채식주의자를 위한 메뉴를 추천해주세요.', additional_kwargs={}, response_metadata={}, id='13e7a6d1-5683-47ed-a654-2b00bd443d67'),\n",
-      " AIMessage(content='채식주의자를 위한 메뉴로 **\"5. 가든 샐러드\"**를 추천합니다.  \\n\\n### **추천 이유**  \\n- **완전 채식(Vegan) 가능**: 주된 재료가 유기농 믹스 그린, 체리 토마토, 오이, 당근 등 식물성 재료로 구성되어 있으며, 발사믹 드레싱도 일반적으로 채식 가능합니다(단, 꿀 포함 여부 확인 필요).  \\n- **가볍고 건강한 구성**: 신선한 채소와 다양한 식감을 즐길 수 있어 채식주의자에게 적합합니다.  \\n- **단백질 추가 요청 가능**: 계란, 두부, 퀴노아 등을 추가해 영양을 보완할 수 있습니다(매장에 문의 필요).  \\n\\n### **기타 채식 옵션 검토**  \\n- **8. 안심 스테이크 샐러드**: 소고기 안심과 파마산 치즈가 포함되어 있어 락토-오보 채식주의자만 가능합니다.  \\n- **4. 버섯 크림 수프**: 생크림과 트러플 오일이 포함되지만, 치즈나 동물성 재료가 없어 비건일 가능성이 높습니다(단, 크림 종류 확인 필요).  \\n\\n채식 유형에 따라 정확한 재료 확인이 필요하니, 주문 시 매장 직원과 상담하시는 것을 권장합니다. 😊', additional_kwargs={}, response_metadata={}, id='391b2aaf-fd57-4771-8c82-ac519f88a847')]\n",
-      "====>2. question \n",
+      "[HumanMessage(content='채식주의자를 위한 메뉴를 추천해주세요.', additional_kwargs={}, response_metadata={}, id='c94a1b0a-788e-4a88-9e0f-019299dd1a07'),\n",
+      " AIMessage(content='채식주의자를 위한 메뉴로 다음과 같이 추천해드립니다:  \\n\\n### 1. **가든 샐러드 (₩12,000)**  \\n- **특징**: 완전한 비건(Vegan) 메뉴로, 유기농 채소(믹스 그린, 체리 토마토, 오이, 당근)와 발사믹 드레싱으로 구성되어 있습니다.  \\n- **추천 이유**: 신선한 채소와 가벼운 드레싱으로 건강한 채식 식사를 원하는 분들에게 적합합니다.  \\n\\n### 2. **트러플 리조또 (₩22,000)**  \\n- **주의사항**: 기본적으로 치즈(파르미지아노 레지아노)가 포함되므로 **락토-오보 채식주의자**에게 적합합니다. 비건인 경우 치즈 생략 요청이 필요할 수 있습니다.  \\n- **특징**: 아르보리오 쌀과 블랙 트러플로 풍미를 낸 크리미한 리조또입니다.  \\n\\n### 추가 옵션  \\n- **버섯 크림 수프 (₩10,000)**: 생크림과 트러플 오일이 사용되므로 락토 채식주의자까지 가능합니다. 비건 대체 요청 시 두유 크림 등으로 변경 가능한지 문의해보세요.  \\n\\n### 제외할 메뉴  \\n- 안심 스테이크 샐러드, 치킨 콘피, 해산물 파스타는 각각 소고기, 닭고기, 해산물이 포함되어 채식 메뉴가 아닙니다.  \\n\\n**추천**: 가장 확실한 채식 메뉴는 **가든 샐러드**이며, 리조또나 수프를 원할 경우 치즈/크림 사용 여부를 확인해 주세요.', additional_kwargs={}, response_metadata={}, id='9f790d1f-1f15-44af-bed6-8433ea5d7f8b')]\n",
+      "====>2. question  <class 'str'>\n",
       "채식주의자를 위한 메뉴를 추천해주세요.\n",
-      "====>2. answer \n",
-      "채식주의자를 위한 메뉴로 **\"5. 가든 샐러드\"**를 추천합니다.  \n",
+      "====>2. answer  <class 'str'>\n",
+      "채식주의자를 위한 메뉴로 다음과 같이 추천해드립니다:  \n",
       "\n",
-      "### **추천 이유**  \n",
-      "- **완전 채식(Vegan) 가능**: 주된 재료가 유기농 믹스 그린, 체리 토마토, 오이, 당근 등 식물성 재료로 구성되어 있으며, 발사믹 드레싱도 일반적으로 채식 가능합니다(단, 꿀 포함 여부 확인 필요).  \n",
-      "- **가볍고 건강한 구성**: 신선한 채소와 다양한 식감을 즐길 수 있어 채식주의자에게 적합합니다.  \n",
-      "- **단백질 추가 요청 가능**: 계란, 두부, 퀴노아 등을 추가해 영양을 보완할 수 있습니다(매장에 문의 필요).  \n",
+      "### 1. **가든 샐러드 (₩12,000)**  \n",
+      "- **특징**: 완전한 비건(Vegan) 메뉴로, 유기농 채소(믹스 그린, 체리 토마토, 오이, 당근)와 발사믹 드레싱으로 구성되어 있습니다.  \n",
+      "- **추천 이유**: 신선한 채소와 가벼운 드레싱으로 건강한 채식 식사를 원하는 분들에게 적합합니다.  \n",
       "\n",
-      "### **기타 채식 옵션 검토**  \n",
-      "- **8. 안심 스테이크 샐러드**: 소고기 안심과 파마산 치즈가 포함되어 있어 락토-오보 채식주의자만 가능합니다.  \n",
-      "- **4. 버섯 크림 수프**: 생크림과 트러플 오일이 포함되지만, 치즈나 동물성 재료가 없어 비건일 가능성이 높습니다(단, 크림 종류 확인 필요).  \n",
+      "### 2. **트러플 리조또 (₩22,000)**  \n",
+      "- **주의사항**: 기본적으로 치즈(파르미지아노 레지아노)가 포함되므로 **락토-오보 채식주의자**에게 적합합니다. 비건인 경우 치즈 생략 요청이 필요할 수 있습니다.  \n",
+      "- **특징**: 아르보리오 쌀과 블랙 트러플로 풍미를 낸 크리미한 리조또입니다.  \n",
       "\n",
-      "채식 유형에 따라 정확한 재료 확인이 필요하니, 주문 시 매장 직원과 상담하시는 것을 권장합니다. 😊\n",
+      "### 추가 옵션  \n",
+      "- **버섯 크림 수프 (₩10,000)**: 생크림과 트러플 오일이 사용되므로 락토 채식주의자까지 가능합니다. 비건 대체 요청 시 두유 크림 등으로 변경 가능한지 문의해보세요.  \n",
+      "\n",
+      "### 제외할 메뉴  \n",
+      "- 안심 스테이크 샐러드, 치킨 콘피, 해산물 파스타는 각각 소고기, 닭고기, 해산물이 포함되어 채식 메뉴가 아닙니다.  \n",
+      "\n",
+      "**추천**: 가장 확실한 채식 메뉴는 **가든 샐러드**이며, 리조또나 수프를 원할 경우 치즈/크림 사용 여부를 확인해 주세요.\n",
       "====>2. context \n",
       "5. 가든 샐러드\n",
       "   • 가격: ₩12,000\n",
@@ -569,21 +560,21 @@
       "   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.\n",
       "====>2. grade_response.score \n",
       "0.95\n",
-      "==>3. should_retry\n",
+      "==>3. should_retry 라우팅함수\n",
       "----GRADTING---\n",
       "Grade Score 점수 :  0.95\n",
       "시도횟수 =  1\n",
       "최종 상태:\n",
       "\n",
-      "{'documents': [Document(id='131366c9-cdc2-4917-9cd3-136d0195e74d', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 5, 'menu_name': '가든 샐러드'}, page_content='5. 가든 샐러드\\n   • 가격: ₩12,000\\n   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\\n   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.'),\n",
-      "               Document(id='9fc6ee99-c962-47fc-bbf8-f6aa8906a545', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 8, 'menu_name': '안심 스테이크 샐러드'}, page_content='8. 안심 스테이크 샐러드\\n   • 가격: ₩26,000\\n   • 주요 식재료: 소고기 안심, 루꼴라, 체리 토마토, 발사믹 글레이즈\\n   • 설명: 부드러운 안심 스테이크를 얇게 슬라이스하여 신선한 루꼴라 위에 올린 메인 요리 샐러드입니다. 체리 토마토와 파마산 치즈 플레이크로 풍미를 더하고, 발사믹 글레이즈로 마무리하여 고기의 풍미를 한층 끌어올렸습니다.'),\n",
-      "               Document(id='3d4eafa5-7417-4bbf-98ee-7ca875e52336', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 9, 'menu_name': '치킨 콘피'}, page_content='9. 치킨 콘피\\n   • 가격: ₩23,000\\n   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\\n   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.'),\n",
-      "               Document(id='68c2f550-5b54-44e5-a58e-b06ef5ee9bbb', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 6, 'menu_name': '해산물 파스타'}, page_content='6. 해산물 파스타\\n   • 가격: ₩24,000\\n   • 주요 식재료: 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스\\n   • 설명: 알 덴테로 삶은 링귀네 파스타에 신선한 해산물을 듬뿍 올린 메뉴입니다. 토마토 소스의 산미와 해산물의 감칠맛이 조화를 이루며, 마늘과 올리브 오일로 풍미를 더했습니다. 파슬리를 뿌려 향긋한 맛을 더합니다.'),\n",
-      "               Document(id='aa4d42e1-47a6-475b-9d09-5d6ca87996dd', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 4, 'menu_name': '버섯 크림 수프'}, page_content='4. 버섯 크림 수프\\n   • 가격: ₩10,000\\n   • 주요 식재료: 양송이버섯, 표고버섯, 생크림, 트러플 오일\\n   • 설명: 양송이버섯과 표고버섯을 오랜 시간 정성스레 끓여 만든 크림 수프입니다. 부드러운 텍스처와 깊은 버섯 향이 특징이며, 최상급 트러플 오일을 살짝 뿌려 고급스러운 향을 더했습니다. 파슬리를 곱게 다져 고명으로 올려 제공됩니다.'),\n",
-      "               Document(id='554ad13b-2d56-43e7-a0e9-2a65409148e7', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 2, 'menu_name': '트러플 리조또'}, page_content='2. 트러플 리조또\\n   • 가격: ₩22,000\\n   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\\n   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.')],\n",
+      "{'documents': [Document(id='cc60a6e4-b579-4e27-a924-2a6e160c3810', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 5, 'menu_name': '가든 샐러드'}, page_content='5. 가든 샐러드\\n   • 가격: ₩12,000\\n   • 주요 식재료: 유기농 믹스 그린, 체리 토마토, 오이, 당근, 발사믹 드레싱\\n   • 설명: 신선한 유기농 채소들로 구성된 건강한 샐러드입니다. 아삭한 식감의 믹스 그린에 달콤한 체리 토마토, 오이, 당근을 더해 다양한 맛과 식감을 즐길 수 있습니다. 특제 발사믹 드레싱이 채소 본연의 맛을 살려줍니다.'),\n",
+      "               Document(id='2e76eb60-4531-4974-8ed5-8ed457a6cf0a', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 8, 'menu_name': '안심 스테이크 샐러드'}, page_content='8. 안심 스테이크 샐러드\\n   • 가격: ₩26,000\\n   • 주요 식재료: 소고기 안심, 루꼴라, 체리 토마토, 발사믹 글레이즈\\n   • 설명: 부드러운 안심 스테이크를 얇게 슬라이스하여 신선한 루꼴라 위에 올린 메인 요리 샐러드입니다. 체리 토마토와 파마산 치즈 플레이크로 풍미를 더하고, 발사믹 글레이즈로 마무리하여 고기의 풍미를 한층 끌어올렸습니다.'),\n",
+      "               Document(id='64632976-e74c-40df-a05f-334ab5b56118', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 9, 'menu_name': '치킨 콘피'}, page_content='9. 치킨 콘피\\n   • 가격: ₩23,000\\n   • 주요 식재료: 닭다리살, 허브, 마늘, 올리브 오일\\n   • 설명: 닭다리살을 허브와 마늘을 넣은 올리브 오일에 저온에서 장시간 조리한 프랑스 요리입니다. 부드럽고 촉촉한 육질이 특징이며, 로즈메리 감자와 제철 채소를 곁들여 제공합니다. 레몬 제스트를 뿌려 상큼한 향을 더했습니다.'),\n",
+      "               Document(id='e1e028fa-aa7e-4d40-8f57-452faa537309', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 6, 'menu_name': '해산물 파스타'}, page_content='6. 해산물 파스타\\n   • 가격: ₩24,000\\n   • 주요 식재료: 링귀네 파스타, 새우, 홍합, 오징어, 토마토 소스\\n   • 설명: 알 덴테로 삶은 링귀네 파스타에 신선한 해산물을 듬뿍 올린 메뉴입니다. 토마토 소스의 산미와 해산물의 감칠맛이 조화를 이루며, 마늘과 올리브 오일로 풍미를 더했습니다. 파슬리를 뿌려 향긋한 맛을 더합니다.'),\n",
+      "               Document(id='29e48b91-6083-4782-87f0-b86d3537888a', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 4, 'menu_name': '버섯 크림 수프'}, page_content='4. 버섯 크림 수프\\n   • 가격: ₩10,000\\n   • 주요 식재료: 양송이버섯, 표고버섯, 생크림, 트러플 오일\\n   • 설명: 양송이버섯과 표고버섯을 오랜 시간 정성스레 끓여 만든 크림 수프입니다. 부드러운 텍스처와 깊은 버섯 향이 특징이며, 최상급 트러플 오일을 살짝 뿌려 고급스러운 향을 더했습니다. 파슬리를 곱게 다져 고명으로 올려 제공됩니다.'),\n",
+      "               Document(id='756956b1-e82c-451a-9fa7-1f49a61670e2', metadata={'source': '../data/restaurant_menu.txt', 'menu_number': 2, 'menu_name': '트러플 리조또'}, page_content='2. 트러플 리조또\\n   • 가격: ₩22,000\\n   • 주요 식재료: 이탈리아산 아르보리오 쌀, 블랙 트러플, 파르미지아노 레지아노 치즈\\n   • 설명: 크리미한 텍스처의 리조또에 고급 블랙 트러플을 듬뿍 얹어 풍부한 향과 맛을 즐길 수 있는 메뉴입니다. 24개월 숙성된 파르미지아노 레지아노 치즈를 사용하여 깊은 맛을 더했으며, 주문 즉시 조리하여 최상의 상태로 제공됩니다.')],\n",
       " 'grade': 0.95,\n",
-      " 'messages': [HumanMessage(content='채식주의자를 위한 메뉴를 추천해주세요.', additional_kwargs={}, response_metadata={}, id='13e7a6d1-5683-47ed-a654-2b00bd443d67'),\n",
-      "              AIMessage(content='채식주의자를 위한 메뉴로 **\"5. 가든 샐러드\"**를 추천합니다.  \\n\\n### **추천 이유**  \\n- **완전 채식(Vegan) 가능**: 주된 재료가 유기농 믹스 그린, 체리 토마토, 오이, 당근 등 식물성 재료로 구성되어 있으며, 발사믹 드레싱도 일반적으로 채식 가능합니다(단, 꿀 포함 여부 확인 필요).  \\n- **가볍고 건강한 구성**: 신선한 채소와 다양한 식감을 즐길 수 있어 채식주의자에게 적합합니다.  \\n- **단백질 추가 요청 가능**: 계란, 두부, 퀴노아 등을 추가해 영양을 보완할 수 있습니다(매장에 문의 필요).  \\n\\n### **기타 채식 옵션 검토**  \\n- **8. 안심 스테이크 샐러드**: 소고기 안심과 파마산 치즈가 포함되어 있어 락토-오보 채식주의자만 가능합니다.  \\n- **4. 버섯 크림 수프**: 생크림과 트러플 오일이 포함되지만, 치즈나 동물성 재료가 없어 비건일 가능성이 높습니다(단, 크림 종류 확인 필요).  \\n\\n채식 유형에 따라 정확한 재료 확인이 필요하니, 주문 시 매장 직원과 상담하시는 것을 권장합니다. 😊', additional_kwargs={}, response_metadata={}, id='391b2aaf-fd57-4771-8c82-ac519f88a847')],\n",
+      " 'messages': [HumanMessage(content='채식주의자를 위한 메뉴를 추천해주세요.', additional_kwargs={}, response_metadata={}, id='c94a1b0a-788e-4a88-9e0f-019299dd1a07'),\n",
+      "              AIMessage(content='채식주의자를 위한 메뉴로 다음과 같이 추천해드립니다:  \\n\\n### 1. **가든 샐러드 (₩12,000)**  \\n- **특징**: 완전한 비건(Vegan) 메뉴로, 유기농 채소(믹스 그린, 체리 토마토, 오이, 당근)와 발사믹 드레싱으로 구성되어 있습니다.  \\n- **추천 이유**: 신선한 채소와 가벼운 드레싱으로 건강한 채식 식사를 원하는 분들에게 적합합니다.  \\n\\n### 2. **트러플 리조또 (₩22,000)**  \\n- **주의사항**: 기본적으로 치즈(파르미지아노 레지아노)가 포함되므로 **락토-오보 채식주의자**에게 적합합니다. 비건인 경우 치즈 생략 요청이 필요할 수 있습니다.  \\n- **특징**: 아르보리오 쌀과 블랙 트러플로 풍미를 낸 크리미한 리조또입니다.  \\n\\n### 추가 옵션  \\n- **버섯 크림 수프 (₩10,000)**: 생크림과 트러플 오일이 사용되므로 락토 채식주의자까지 가능합니다. 비건 대체 요청 시 두유 크림 등으로 변경 가능한지 문의해보세요.  \\n\\n### 제외할 메뉴  \\n- 안심 스테이크 샐러드, 치킨 콘피, 해산물 파스타는 각각 소고기, 닭고기, 해산물이 포함되어 채식 메뉴가 아닙니다.  \\n\\n**추천**: 가장 확실한 채식 메뉴는 **가든 샐러드**이며, 리조또나 수프를 원할 경우 치즈/크림 사용 여부를 확인해 주세요.', additional_kwargs={}, response_metadata={}, id='9f790d1f-1f15-44af-bed6-8433ea5d7f8b')],\n",
       " 'num_generation': 1}\n"
      ]
     }
