--- a/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
+++ b/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,6 @@
     "# print(llm)\n",
     "\n",
     "from langchain_openai import ChatOpenAI\n",
-    "\n",
     "llm = ChatOpenAI(\n",
     "    model='gpt-3.5-turbo-0125', \n",
     "    temperature=0,\n",
@@ -542,7 +541,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "client=<openai.resources.chat.completions.completions.Completions object at 0x00000291E828AD80> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x00000291E828B350> model_name='solar-pro' temperature=0.5 model_kwargs={} upstage_api_key=SecretStr('**********') upstage_api_base='https://api.upstage.ai/v1'\n",
+      "solar-pro\n",
+      "<class 'langgraph.graph.state.CompiledStateGraph'>\n",
+      "{'messages': [HumanMessage(content='3+5는?', additional_kwargs={}, response_metadata={}, id='3d9e00ab-7e18-4dee-8aae-e2c876375333'), AIMessage(content='8\\n\\nThe question \"3+5는?\" (What is 3+5?) can be answered directly with general knowledge without needing any function calls. The result is 8. According to the decision criteria, no function calls are necessary since the question can be resolved through basic arithmetic understanding.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 60, 'prompt_tokens': 509, 'total_tokens': 569, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '8093094c-b98f-430b-a4dd-f080279bcffd', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--7462e6c4-6dc5-4cde-8ceb-f529f2984636-0', usage_metadata={'input_tokens': 509, 'output_tokens': 60, 'total_tokens': 569, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n"
+     ]
+    }
+   ],
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
     "from langchain.agents import tool\n",
@@ -550,12 +560,19 @@
     "from langchain_core.messages import HumanMessage\n",
     "from langchain_upstage import ChatUpstage\n",
     "\n",
-    "llm = ChatUpstage(\n",
-    "        model=\"solar-pro\",\n",
-    "        base_url=\"https://api.upstage.ai/v1\",\n",
-    "        temperature=0.5\n",
-    "    )\n",
-    "print(llm)\n",
+    "# llm = ChatUpstage(\n",
+    "#         model=\"solar-pro\",\n",
+    "#         base_url=\"https://api.upstage.ai/v1\",\n",
+    "#         temperature=0.5\n",
+    "#     )\n",
+    "# print(llm)\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "llm = ChatOpenAI(\n",
+    "    model='gpt-3.5-turbo-0125', \n",
+    "    temperature=0,\n",
+    ")\n",
+    "print(llm.model_name)\n",
     "\n",
     "@tool\n",
     "def add2(a: int, b: int) -> int:\n",
@@ -563,8 +580,9 @@
     "    return a + b\n",
     "\n",
     "# 한 줄로 에이전트 생성 - 내부에서 StateGraph를 자동 구성\n",
-    "print(llm.model_name)\n",
-    "agent = create_react_agent(llm, [add2])\n",
+    "\n",
+    "agent = create_react_agent(model=llm, tools=[add2])\n",
+    "print(type(agent))\n",
     "\n",
     "# 바로 사용 가능\n",
     "result = agent.invoke({\"messages\": [HumanMessage(content=\"3+5는?\")]})\n",
