--- a/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
+++ b/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
@@ -539,17 +539,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "client=<openai.resources.chat.completions.completions.Completions object at 0x00000291E828AD80> async_client=<openai.resources.chat.completions.completions.AsyncCompletions object at 0x00000291E828B350> model_name='solar-pro' temperature=0.5 model_kwargs={} upstage_api_key=SecretStr('**********') upstage_api_base='https://api.upstage.ai/v1'\n",
-      "solar-pro\n",
+      "gpt-3.5-turbo-0125\n",
       "<class 'langgraph.graph.state.CompiledStateGraph'>\n",
-      "{'messages': [HumanMessage(content='3+5는?', additional_kwargs={}, response_metadata={}, id='3d9e00ab-7e18-4dee-8aae-e2c876375333'), AIMessage(content='8\\n\\nThe question \"3+5는?\" (What is 3+5?) can be answered directly with general knowledge without needing any function calls. The result is 8. According to the decision criteria, no function calls are necessary since the question can be resolved through basic arithmetic understanding.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 60, 'prompt_tokens': 509, 'total_tokens': 569, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'solar-pro2-250909', 'system_fingerprint': None, 'id': '8093094c-b98f-430b-a4dd-f080279bcffd', 'service_tier': None, 'finish_reason': 'stop', 'logprobs': None}, id='run--7462e6c4-6dc5-4cde-8ceb-f529f2984636-0', usage_metadata={'input_tokens': 509, 'output_tokens': 60, 'total_tokens': 569, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n"
+      "{'messages': [HumanMessage(content='3+5는?', additional_kwargs={}, response_metadata={}, id='28ddd74f-cb59-4833-81ef-e7f49baabb2f'), AIMessage(content='', additional_kwargs={'tool_calls': [{'id': 'call_SXILXoQJEHJ0J4gFooRL3TEr', 'function': {'arguments': '{\"a\":3,\"b\":5}', 'name': 'add2'}, 'type': 'function'}], 'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 18, 'prompt_tokens': 58, 'total_tokens': 76, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-CJxbSrhDOBr2yIhRy1EQlpRUG4I9r', 'service_tier': 'default', 'finish_reason': 'tool_calls', 'logprobs': None}, id='run--5fc29783-deaf-4446-a159-69bddd71c290-0', tool_calls=[{'name': 'add2', 'args': {'a': 3, 'b': 5}, 'id': 'call_SXILXoQJEHJ0J4gFooRL3TEr', 'type': 'tool_call'}], usage_metadata={'input_tokens': 58, 'output_tokens': 18, 'total_tokens': 76, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}}), ToolMessage(content='8', name='add2', id='19974db1-7de5-4fdd-b371-beb2d0522f62', tool_call_id='call_SXILXoQJEHJ0J4gFooRL3TEr'), AIMessage(content='3 + 5는 8입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 10, 'prompt_tokens': 85, 'total_tokens': 95, 'completion_tokens_details': {'accepted_prediction_tokens': 0, 'audio_tokens': 0, 'reasoning_tokens': 0, 'rejected_prediction_tokens': 0}, 'prompt_tokens_details': {'audio_tokens': 0, 'cached_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'id': 'chatcmpl-CJxbS9v2JZvqfxjE6LwZdWyH51404', 'service_tier': 'default', 'finish_reason': 'stop', 'logprobs': None}, id='run--7cd9fb77-2605-4612-9b48-0c155dbc3703-0', usage_metadata={'input_tokens': 85, 'output_tokens': 10, 'total_tokens': 95, 'input_token_details': {'audio': 0, 'cache_read': 0}, 'output_token_details': {'audio': 0, 'reasoning': 0}})]}\n"
      ]
     }
    ],
@@ -588,6 +587,84 @@
     "result = agent.invoke({\"messages\": [HumanMessage(content=\"3+5는?\")]})\n",
     "\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langgraph.prebuilt import create_react_agent\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.agents import tool\n",
+    "from langchain_core.messages import HumanMessage\n",
+    "\n",
+    "# 더 복잡한 도구들 정의\n",
+    "@tool\n",
+    "def calculate_compound_interest(principal: float, rate: float, years: int) -> str:\n",
+    "    \"\"\"원금, 이자율, 기간을 받아 복리 이자를 계산합니다.\"\"\"\n",
+    "    amount = principal * (1 + rate/100) ** years\n",
+    "    interest = amount - principal\n",
+    "    return f\"{years}년 후 원리금: {amount:,.0f}원, 이자: {interest:,.0f}원\"\n",
+    "\n",
+    "@tool\n",
+    "def calculate_tax(income: float) -> str:\n",
+    "    \"\"\"연소득을 받아 간이 세액을 계산합니다.\"\"\"\n",
+    "    if income <= 12000000:\n",
+    "        tax = income * 0.06\n",
+    "    elif income <= 46000000:\n",
+    "        tax = 720000 + (income - 12000000) * 0.15\n",
+    "    elif income <= 88000000:\n",
+    "        tax = 5820000 + (income - 46000000) * 0.24\n",
+    "    else:\n",
+    "        tax = 15900000 + (income - 88000000) * 0.35\n",
+    "    \n",
+    "    return f\"예상 세액: {tax:,.0f}원, 세후 소득: {income - tax:,.0f}원\"\n",
+    "\n",
+    "@tool\n",
+    "def get_weekday(date_str: str) -> str:\n",
+    "    \"\"\"YYYY-MM-DD 형식의 날짜를 받아 요일을 반환합니다.\"\"\"\n",
+    "    from datetime import datetime\n",
+    "    date_obj = datetime.strptime(date_str, \"%Y-%m-%d\")\n",
+    "    weekdays = [\"월요일\", \"화요일\", \"수요일\", \"목요일\", \"금요일\", \"토요일\", \"일요일\"]\n",
+    "    return f\"{date_str}은 {weekdays[date_obj.weekday()]}입니다.\"\n",
+    "\n",
+    "# LLM 초기화\n",
+    "llm = ChatOpenAI(model=\"gpt-3.5-turbo\")\n",
+    "print(llm.model_name)\n",
+    "\n",
+    "# 도구 리스트\n",
+    "tools = [calculate_compound_interest, calculate_tax, get_weekday]\n",
+    "\n",
+    "# ReAct 에이전트 생성\n",
+    "agent = create_react_agent(llm, tools)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 복합적인 질문 테스트\n",
+    "complex_questions = [\n",
+    "    \"1억원을 연 5% 복리로 10년 동안 예금하면 얼마가 될까?\",\n",
+    "    \"연소득 5천만원일 때 내야 할 세금은 얼마야?\",\n",
+    "    \"2024-12-25은 무슨 요일이야?\",\n",
+    "    \"연소득 8천만원일 때 세금을 계산하고, 남은 돈을 연 4% 복리로 5년간 예금하면 얼마가 돼?\"\n",
+    "]\n",
+    "\n",
+    "for question in complex_questions:\n",
+    "    print(f\"\\n질문: {question}\")\n",
+    "    print(\"-\" * 50)\n",
+    "    \n",
+    "    result = agent.invoke({\"messages\": [HumanMessage(content=question)]})\n",
+    "    response = result[\"messages\"][-1].content\n",
+    "    \n",
+    "    print(f\"답변: {response}\")\n",
+    "    print(\"=\" * 80)"
    ]
   }
  ],
