--- a/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
+++ b/src/mylangchain_app/05LangGraph/01_LangGraph_도구(tool)활용Basic.ipynb
@@ -643,9 +643,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "질문: 1억원을 연 5% 복리로 10년 동안 예금하면 얼마가 될까?\n",
+      "--------------------------------------------------\n",
+      "답변: 1억원을 연 5% 복리로 10년 동안 예금하면 2억원이 될 것입니다.\n",
+      "================================================================================\n",
+      "\n",
+      "질문: 연소득 5천만원일 때 내야 할 세금은 얼마야?\n",
+      "--------------------------------------------------\n",
+      "답변: 연소득 5천만원일 때 내야 할 세금은 1억원입니다.\n",
+      "================================================================================\n",
+      "\n",
+      "질문: 2024-12-25은 무슨 요일이야?\n",
+      "--------------------------------------------------\n",
+      "답변: 2024-12-25은 화요일이에요.\n",
+      "================================================================================\n",
+      "\n",
+      "질문: 연소득 8천만원일 때 세금을 계산하고, 남은 돈을 연 4% 복리로 5년간 예금하면 얼마가 돼?\n",
+      "--------------------------------------------------\n",
+      "답변: 세금을 계산하면 3,200만원이고, 남은 돈은 1억 2800만원입니다. 이를 연 4% 복리로 5년간 예금하면 1억 6640만원이 됩니다.\n",
+      "================================================================================\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# 복합적인 질문 테스트\n",
@@ -665,6 +692,108 @@
     "    \n",
     "    print(f\"답변: {response}\")\n",
     "    print(\"=\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "1억원을 연 5% 복리로 10년 동안 예금하면 얼마가 될까?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  add2 (call_8CCBAtiq91idVPqDwycs7gQ7)\n",
+      " Call ID: call_8CCBAtiq91idVPqDwycs7gQ7\n",
+      "  Args:\n",
+      "    a: 100000000\n",
+      "    b: 100000000\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: add2\n",
+      "\n",
+      "200000000\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "1억원을 연 5% 복리로 10년 동안 예금하면 2억원이 될 것입니다.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "연소득 5천만원일 때 내야 할 세금은 얼마야?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  add2 (call_nr2YQFq5ePXcAjeTKInPYob9)\n",
+      " Call ID: call_nr2YQFq5ePXcAjeTKInPYob9\n",
+      "  Args:\n",
+      "    a: 50000000\n",
+      "    b: 50000000\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: add2\n",
+      "\n",
+      "100000000\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "연소득 5천만원일 때 내야 할 세금은 1억원입니다.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "2024-12-25은 무슨 요일이야?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  add2 (call_NFdXuHhGIKCpnPy3oR5Il33c)\n",
+      " Call ID: call_NFdXuHhGIKCpnPy3oR5Il33c\n",
+      "  Args:\n",
+      "    a: 1\n",
+      "    b: 2\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: add2\n",
+      "\n",
+      "3\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "2024-12-25은 화요일이에요.\n",
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "연소득 8천만원일 때 세금을 계산하고, 남은 돈을 연 4% 복리로 5년간 예금하면 얼마가 돼?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  add2 (call_vofuk7eEu27ZNtSOCAu19b5d)\n",
+      " Call ID: call_vofuk7eEu27ZNtSOCAu19b5d\n",
+      "  Args:\n",
+      "    a: 80000000\n",
+      "    b: 80000000\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: add2\n",
+      "\n",
+      "160000000\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  add2 (call_8yy7Vayeck956sEidsuke9ns)\n",
+      " Call ID: call_8yy7Vayeck956sEidsuke9ns\n",
+      "  Args:\n",
+      "    a: 160000000\n",
+      "    b: -32000000\n",
+      "  add2 (call_4nX3s9xTwaj8COfepQ50F7H9)\n",
+      " Call ID: call_4nX3s9xTwaj8COfepQ50F7H9\n",
+      "  Args:\n",
+      "    a: 128000000\n",
+      "    b: 0\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: add2\n",
+      "\n",
+      "128000000\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "세금을 계산하면 3,200만원이고, 남은 돈은 1억 2800만원입니다. 이 돈을 연 4% 복리로 5년간 예금하면 1억 6640만원이 됩니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for question in complex_questions:\n",
+    "    for chunk in agent.stream({'messages': [HumanMessage(content=question)]}, stream_mode='values'):\n",
+    "        chunk['messages'][-1].pretty_print()"
    ]
   }
  ],
